mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
          - name: use-vc
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.28.0@sha256:8b02290f4d1806f02acac6f25f6d48a3c965612fda1f8e914d5af533276f8688
          ports:
            - containerPort: 9000
              name: http
          volumeMounts:
            - name: data
              mountPath: /app/data
          livenessProbe:
            httpGet:
              path: /api/app/about
              port: 9000
            initialDelaySeconds: 20
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/app/about
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            limits:
              memory: "1000Mi"
              cpu: "750m"
            requests:
              memory: "256Mi"
              cpu: "50m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mealie-data
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  selector:
    app: mealie
  ports:
    - port: 9000
      targetPort: 9000
      nodePort: 30925
      name: http
  type: NodePort
